# slnp

./: CMakeLists.txt  README.md  doxy.in
example/: CMakeLists.txt  Sample.cpp  Sample.h  client.cpp  server.cpp
lib/: slnp_client.lib  slnp_server.lib
slnp/: CMakeLists.txt  slnp.cpp  slnp.h
src/: CMakeLists.txt  Client.cpp  Client.h  IPCTarget.cpp  IPCTarget.h  Logger.cpp  Logger.h  Macros.h  Registry.cpp  Registry.h  Server.cpp  Server.h  Types.cpp  Types.h
