# CMakeList.txt: slnp için CMake projesi, kaynağı ekleyin ve tanımlayın
# projeye özgü mantık burada bulunur.
#
cmake_minimum_required (VERSION 3.8)

# Kaynağı bu projenin yürütülebilir dosyasına ekleyin.
add_executable (slnp "slnp.cpp" "slnp.h")

# TODO: Gerekirse testleri ve yükleme hedeflerini ekleyin.
